# kalamos

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  ci.sh  deny.toml  test.sh
.github/workflows/: rust.yml
benches/: layout.rs  text_shaping_benchmarks.rs
examples/editor/: Cargo.toml
examples/editor-test/: Cargo.toml
examples/editor-test/src/: main.rs
examples/editor/src/: main.rs
examples/multiview/: Cargo.toml
examples/multiview/src/: main.rs
examples/rich-text/: Cargo.toml
examples/rich-text/src/: main.rs
examples/terminal/: Cargo.toml
examples/terminal/src/: main.rs
src/: attrs.rs  bidi_para.rs  buffer.rs  buffer_line.rs  cached.rs  cursor.rs  glyph_cache.rs  lib.rs  line_ending.rs  render.rs  shape.rs  shape_run_cache.rs  swash.rs
src/edit/: editor.rs  syntect.rs  vi.rs
src/font/: cache.rs  mod.rs  system.rs
src/font/fallback/: mod.rs
tests/: backspace_grapheme.rs  bidi_paragraphs.rs  cursor.rs  cursor_glyph_cluster.rs  direction.rs  editor_modified_state.rs  ellipsize_incongruent.rs  ellipsize_rendering.rs  empty_fontdb.rs  external_line_mutation.rs  font_decoration_metrics.rs  highlight_contract.rs  hit.rs  hit_dead_window.rs  incongruent_resume_width.rs  insert_control_filter.rs  justified_geometry.rs  layout_cursor_affinity.rs  leading_run_survives_width_bound.rs  ligature_probe_attrs.rs  logical_caret_motion.rs  metrics_invariants.rs  richtext_layout.rs  rtl_vertical_motion.rs  set_scroll_unbounded.rs  shape_run_cache_direction.rs  shape_until_cursor_stale.rs  shapeword_fastpath_attrs.rs  shaping_and_rendering.rs  stale_cursor_degrade.rs  subpixel_bin_saturates.rs  syntect_cache_shift.rs  tab_degenerate_advance.rs  text_decorations.rs  unindent_cursor.rs  variable_font_weight.rs  visual_caret_motion.rs  wrap_stability.rs  wrap_word_fallback.rs
tests/common/: mod.rs
